--- a/404.html
+++ b/404.html
@@ -97,34 +97,46 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="pokemon404"><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
-              <picture>
-                <source srcset="resources/images/luxio-shiny.png" media="(prefers-color-scheme: dark)">
-                <img src="resources/images/luxio.png" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
-              </picture>
-              <p align="center">
-                A wild <b>Luxio</b> appeared!
-              </p>
-              <p>
-                Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
-              </p>
+            <picture>
+              <source srcset="resources/images/luxio-shiny.png" media="(prefers-color-scheme: dark)">
+              <img src="resources/images/luxio.png" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
+            </picture>
+            <p align="center">
+              A wild <b>Luxio</b> appeared!
+            </p>
+            <p>
+              Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
+            </p>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="example"><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
-              <p>
-                Example Pokédex over DNS query using <a href="https://linux.die.net/man/1/dig">dig</a>:
-              </p>
-              <pre>
+            <p>
+              Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/dig">dig</a>:
+            </p>
+            <pre>
 dig +short txt luxio.pokedex @dns.sainternet.xyz
-              </pre>
-              <p>
-                Example Pokédex over DNS query using <a href="https://linux.die.net/man/1/nslookup">nslookup</a>:
-              </p>
-              <pre>
+
+dig +short txt 404.pokedex @dns.sainternet.xyz
+            </pre>
+            <p>
+              Example Pokédex over DNS queries using <a href="https://github.com/ameshkov/dnslookup">dnslookup</a>:
+            </p>
+            <pre>
+RRTYPE=TXT dnslookup luxio.pokedex dns.sainternet.xyz
+
+RRTYPE=TXT dnslookup 404.pokedex dns.sainternet.xyz
+            </pre>
+            <p>
+              Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/nslookup">nslookup</a>:
+            </p>
+            <pre>
+nslookup -type=txt luxio.pokedex dns.sainternet.xyz
+
 nslookup -type=txt 404.pokedex dns.sainternet.xyz
-              </pre>
+            </pre>
           </div>
         </div>
       </main>
