--- a/filtereddns.html
+++ b/filtereddns.html
@@ -111,21 +111,23 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="filtereddns"><span class="embiggen">Filtered DNS</span></h3>
-              <p>
-                Sainternet offers validating, recursive, caching, <i>mostly</i> specification compliant, filtered <a href="https://wikipedia.org/wiki/Domain_Name_System">DNS</a> servers with a zero logging policy, served over <a href="/portsandprotocols.html#portsandprotocols">all your favourite acronyms</a>.
-              </p>
-              <p>
-                Sainternet Filtered DNS blocks many domains known to be associated with unsavoury behaviours (including but not limited to advertising, botnets, malware, spam and telemetry), using a variety of methods updated regularly.
-              </p>
-              <p>
-                Sainternet <b>does not</b> and <b><i>will not</i></b> block domains based upon ethical, moral, personal, political or religious belief, nor upon any lack thereof.
-              </p>
+            <p>
+              Sainternet offers validating, recursive, caching, <i>mostly</i> specification compliant, filtered <a href="https://wikipedia.org/wiki/Domain_Name_System">DNS</a> servers with a zero logging policy, served over <a href="/portsandprotocols.html#portsandprotocols">all your favourite acronyms</a>.
+            </p>
+            <p>
+              Sainternet Filtered DNS blocks many domains known to be associated with unsavoury behaviours (including but not limited to advertising, botnets, malware, spam and telemetry), using a variety of methods updated regularly.
+            </p>
+            <p>
+              Sainternet <b>does not</b> and <b><i>will not</i></b> block domains based upon ethical, moral, personal, political or religious belief, nor upon any lack thereof.
+            </p>
+            <div class="sainternet-notes">
               <p>
                 Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> and Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent them from bypassing Sainternet.
               </p>
               <p>
                 You can find information about the technologies powering Sainternet Filtered DNS <a href="/technologies.html">here</a>.
               </p>
+            </div>
           </div>
         </div>
       </main>
