--- a/portsandprotocols.html
+++ b/portsandprotocols.html
@@ -97,46 +97,46 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="portsandprotocols"><span class="embiggen">Ports and Protocols</span></h3>
-              <p>
-                Sainternet Filtered DNS is available over the following ports and protocols.
-              </p>
-              <table>
-                <tr>
-                  <th>Protocol</th>
-                  <th>Address</th>
-                  <th>Port</th>
-                </tr>
-                <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS">HTTPS</a></td>
-                  <td>dns.sainternet.xyz</td>
-                  <td>TCP 443</td>
-                </tr>
-                <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/HTTP/3">HTTP/3</a></td>
-                  <td>dns.sainternet.xyz</td>
-                  <td>UDP 443</td>
-                </tr>
-                <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a></td>
-                  <td>119.224.127.171<br><b>::ffff:119.224.127.171</b><br>::ffff:77e0:7fab</td>
-                  <td>TCP 53</td>
-                </tr>
-                <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS">TLS</a></td>
-                  <td>dns.sainternet.xyz</td>
-                  <td>TCP 853</td>
-                </tr>
-                <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a></td>
-                  <td>119.224.127.171<br><b>::ffff:119.224.127.171</b><br>::ffff:77e0:7fab</td>
-                  <td>UDP 53</td>
-                </tr>
-                <tr>
-                  <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC">QUIC</a></td>
-                  <td>dns.sainternet.xyz</td>
-                  <td>UDP 784<br><b>UDP 853</b><br>UDP 8853</td>
-                </tr>
-              </table>
+            <p>
+              Sainternet Filtered DNS is available over the following ports and protocols.
+            </p>
+            <table>
+              <tr>
+                <th>Protocol</th>
+                <th>Address</th>
+                <th>Port</th>
+              </tr>
+              <tr>
+                <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS">HTTPS</a></td>
+                <td>dns.sainternet.xyz</td>
+                <td>TCP 443</td>
+              </tr>
+              <tr>
+                <td><a href="https://en.wikipedia.org/wiki/HTTP/3">HTTP/3</a></td>
+                <td>dns.sainternet.xyz</td>
+                <td>UDP 443</td>
+              </tr>
+              <tr>
+                <td><a href="https://en.wikipedia.org/wiki/Transmission_Control_Protocol">TCP</a></td>
+                <td>119.224.127.171<br>::ffff:77e0:7fab</td>
+                <td>TCP 53</td>
+              </tr>
+              <tr>
+                <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS">TLS</a></td>
+                <td>dns.sainternet.xyz</td>
+                <td>TCP 853</td>
+              </tr>
+              <tr>
+                <td><a href="https://en.wikipedia.org/wiki/User_Datagram_Protocol">UDP</a></td>
+                <td>119.224.127.171<br>::ffff:77e0:7fab</td>
+                <td>UDP 53</td>
+              </tr>
+              <tr>
+                <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC">QUIC</a></td>
+                <td>dns.sainternet.xyz</td>
+                <td>UDP 853</td>
+              </tr>
+            </table>
            </div>
         </div>
       </main>
