--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -96,64 +96,65 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="connecttosainternet"><span class="embiggen">Connect to Sainternet</span></h3>
-              <p>
-                The following describes connecting to Sainternet Filtered DNS in several platforms, services.
-              </p>
+            <p>
+              The following describes connecting to Sainternet Filtered DNS in several platforms, services.
+            </p>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="androidprivatedns"><icon class="fa-brands fa-android"></icon> <span class="embiggen">Android<br>Private DNS</span></h3>
-              <p align="center">
-                Android 9 (Pie) or higher required.
-              </p>
-              <ol>
-                <li>Settings <icon class="fa-solid fa-cog"></icon></li>
-                <li>Search <icon class="fa-solid fa-magnifying-glass"></icon></li>
-                <li>Search for "Private DNS"</li>
-                <li>Select "Private DNS"</li>
-                <li>Select "Designated Private DNS"</li>
-                <li>Enter "<b>dns.sainternet.xyz</b>"</li>
-                <li>Done</li>
-              </ol>
+            <p align="center">
+              Android 9 (Pie) or higher required.
+            </p>
+            <ol>
+              <li>Settings <icon class="fa-solid fa-cog"></icon></li>
+              <li>Search <icon class="fa-solid fa-magnifying-glass"></icon></li>
+              <li>Search for "Private DNS"</li>
+              <li>Select "Private DNS"</li>
+              <li>Select "Designated Private DNS"</li>
+              <li>Enter "<b>dns.sainternet.xyz</b>"</li>
+              <li>Done</li>
+            </ol>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="appleiosmacos"><icon class="fa-brands fa-apple"></icon> <span class="embiggen">Apple<br>iOS/macOS</span></h3>
-              <p align="center">
-                Apple iOS 14/macOS Big Sur or higher required.
-              </p>
-              <ol>
-                <li>Select a DNS Profile from below (if you don't know which one to choose, select <a href="#recommendeddnsprofile">DoHTTPS/TLS</a>)</li>
-                <li>Download the selected DNS Profile (click the icon to download)</li>
-                <li>Navigate to the downloaded DNS Profile</li>
-                <li>Open the DNS Profile</li>
-                <li>Agree to any/all prompts</li>
-                <li>Done</li>
-              </ol>
-              <div class="sainternet-list-action mdl-list">
-                <div class="mdl-list__item">
-                  <span class="mdl-list__item-primary-content">
-                    <span>Sainternet DoHTTPS</span>
-                  </span>
-                  <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-https-only.mobileconfig" download="sainternet-https-only.mobileconfig"><icon class="material-icons-outlined">file_download</icon></a>
-                </div>
-                <div class="mdl-list__item">
-                  <span class="mdl-list__item-primary-content">
-                    <span>Sainternet DoTLS</span>
-                  </span>
-                  <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-tls-only.mobileconfig" download="sainternet-tls-only.mobileconfig"><icon class="material-icons-outlined">file_download</icon></a>
-                </div>
-                <div class="mdl-list__item" id="recommendeddnsprofile">
-                  <span class="mdl-list__item-primary-content">
-                    <span>Sainternet DoHTTPS/TLS</span>
-                  </span>
-                  <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-https-and-tls.mobileconfig" download="sainternet-https-and-tls.mobileconfig"><icon class="material-icons-outlined">file_download</icon></a>
-                </div>
+            <p align="center">
+              Apple iOS 14/macOS Big Sur or higher required.
+            </p>
+            <ol>
+              <li>Select a DNS Profile from below (if you don't know which one to choose, just select <a href="#recommendeddnsprofile">DNS over HTTPS/TLS</a>)</li>
+              <li>Download the selected DNS Profile (click the icon to download)</li>
+              <li>Navigate to the downloaded DNS Profile</li>
+              <li>Open the DNS Profile</li>
+              <li>Agree to any/all prompts</li>
+              <li>Done</li>
+            </ol>
+            <div class="sainternet-list-action mdl-list">
+              <div class="mdl-list__item">
+                <span class="mdl-list__item-primary-content">
+                  <span>DNS over HTTPS</span>
+                </span>
+                <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-https-only.mobileconfig" download="sainternet-https-only.mobileconfig"><span class="material-icons-outlined">file_download</icon></a>
               </div>
+              <div class="mdl-list__item">
+                <span class="mdl-list__item-primary-content">
+                  <span>DNS over TLS</span>
+                </span>
+                <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-tls-only.mobileconfig" download="sainternet-tls-only.mobileconfig"><span class="material-icons-outlined">file_download</span></a>
+              </div>
+              <div class="mdl-list__item" id="recommendeddnsprofile">
+                <span class="mdl-list__item-primary-content">
+                  <span>DNS over HTTPS/TLS</span>
+                </span>
+                <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-https-and-tls.mobileconfig" download="sainternet-https-and-tls.mobileconfig"><span class="material-icons-outlined">file_download</span></a>
+              </div>
+            </div>
+            <div class="sainternet-notes">
               <p>
                 Notes:
               </p>
@@ -161,46 +162,49 @@
                 <li>These profiles are not digitally signed and that is expected/normal.</li>
                 <li>Sainternet intentionally disables Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent it from bypassing Sainternet.</li>
               </ol>
+            </div>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="googlechromechromium"><icon class="fa-brands fa-chrome"></icon> <span class="embiggen">Google<br>Chrome/Chromium</span></h3>
-              <ol>
-                <li>Overflow Menu <icon class="fa-solid fa-ellipsis-vertical"></icon></li>
-                <li>Settings <icon class="fa-solid fa-cog"></icon></li>
-                <li>Select "Privacy and security"</li>
-                <li>Select "Use secure DNS"</li>
-                <li>Select "Choose another provider"</li>
-                <li>Enter "<b>dns.sainternet.xyz</b>"</li>
-                <li>Done</li>
-              </ol>
+            <ol>
+              <li>Overflow Menu <icon class="fa-solid fa-ellipsis-vertical"></icon></li>
+              <li>Settings <icon class="fa-solid fa-cog"></icon></li>
+              <li>Select "Privacy and security"</li>
+              <li>Select "Use secure DNS"</li>
+              <li>Select "Choose another provider"</li>
+              <li>Enter "<b>dns.sainternet.xyz</b>"</li>
+              <li>Done</li>
+            </ol>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon> <span class="embiggen">Mozilla<br>Firefox</span></h3>
-              <ol>
-                <li>Menu <icon class="fa-solid fa-bars"></icon></li>
-                <li>Settings <icon class="fa-solid fa-cog"></icon></li>
-                <li>Select "General"</li>
-                <li>Select "Network Settings"</li>
-                <li>Select "Settings"</li>
-                <li>Select "Enable DNS over HTTPS"</li>
-                <li>Select "Use Provider"</li>
-                <li>Select "Custom"</li>
-                <li>Enter "<b>dns.sainternet.xyz</b>"</li>
-                <li>Select "OK"</li>
-                <li>Done</li>
-              </ol>
+            <ol>
+              <li>Menu <icon class="fa-solid fa-bars"></icon></li>
+              <li>Settings <icon class="fa-solid fa-cog"></icon></li>
+              <li>Select "General"</li>
+              <li>Select "Network Settings"</li>
+              <li>Select "Settings"</li>
+              <li>Select "Enable DNS over HTTPS"</li>
+              <li>Select "Use Provider"</li>
+              <li>Select "Custom"</li>
+              <li>Enter "<b>dns.sainternet.xyz</b>"</li>
+              <li>Select "OK"</li>
+              <li>Done</li>
+            </ol>
+            <div class="sainternet-notes">
               <p>
                 Notes:
               </p>
               <ol>
                 <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> to prevent it from bypassing Sainternet (ignored if manually configured).</li>
               </ol>
+            </div>
            </div>
         </div>
       </main>
