--- a/frequentlyaskedquestions.html
+++ b/frequentlyaskedquestions.html
@@ -96,28 +96,29 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="frequentlyaskedquestions"><span class="embiggen">Frequently Asked Questions</span></h3>
-              <p>
-                Answers to some frequently asked questions regarding Sainternet Filtered DNS.
-              </p>
+            <p>
+              Answers to some frequently asked questions regarding Sainternet Filtered DNS.
+            </p>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="whowhatwhenwhereandwhy"><span class="embiggen">Who, What,<br>When, Where and Why?</span></h3>
-              <p align="center">
-                <b>Who?</b>
-              </p>
-                Sainternet is chiefly managed by myself, saint (aka. Hayden Pearce), but would not be possible without contributions from my Chief Analyst/Technician (CAT) Tiggy, and the invaluable oversight of my Knowledge/Information Technologist in charge of Testing Immersive Experiences (KITTIE), Willow.
-              <p>
-              </p>
-              <hr>
-              <p align="center">
-                <b>What?</b>
-              </p>
-              <p>
-                As mentioned, Sainternet is a set of validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy.
-              </p>
+            <p align="center">
+              <b>Who?</b>
+            </p>
+              Sainternet is chiefly managed by myself, saint (aka. Hayden Pearce), but would not be possible without contributions from my Chief Analyst/Technician (CAT) Tiggy, and the invaluable oversight of my Knowledge/Information Technologist in charge of Testing Immersive Experiences (KITTIE), Willow.
+            <p>
+            </p>
+            <hr>
+            <p align="center">
+              <b>What?</b>
+            </p>
+            <p>
+              As mentioned, Sainternet is a set of validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy.
+            </p>
+            <div class="sainternet-notes">
               <p>
                 Notes:
               </p>
@@ -125,63 +126,64 @@
                 <li>What "mostly specification compliant" means that relevant specifications are adhered to, provided they don't provide a net negative experience for other Sainternet DNS users and/or the Internet at large.<br>Examples of this include but are not limited to: Denial of the request type "ANY", refusing very large/oversize but otherwise valid payloads, selective rate limiting/introducing progressive jitter, etc.</li>
                 <li>Here "zero logging policy" refers to a self enforced policy whereby any/all logging of relevant services (those involved with processing some or all of a Sainternet DNS query and its response) are either disabled entirely, or set to their minimum possible verbosity and redirected to "/dev/null".</li>
               </ol>
-              <hr>
-              <p align="center">
-                <b>When?</b>
-              </p>
-              <p>
-                Sainternet research resolvers or their spiritual ancestors have been operating in some capacity or other since 2016.
-              </p>
-              <hr>
-              <p align="center">
-                <b>Where?</b>
-              </p>
-              <p>
-                Sainternet is based in Christchurch, New Zealand.
-              </p>
-              <hr>
-              <p align="center">
-                <b>Why?</b>
-              </p>
-              <p>
-                Mostly because I can.
-              </p>
-              <p>
-                To better educate myself in the deployment, management and development of related technologies, while hopefully providing a better domain name resolution experience along the way.
-              </p>
+            </div>
+            <hr>
+            <p align="center">
+              <b>When?</b>
+            </p>
+            <p>
+              Sainternet research resolvers or their spiritual ancestors have been operating in some capacity or other since 2016.
+            </p>
+            <hr>
+            <p align="center">
+              <b>Where?</b>
+            </p>
+            <p>
+              Sainternet is based in Christchurch, New Zealand.
+            </p>
+            <hr>
+            <p align="center">
+              <b>Why?</b>
+            </p>
+            <p>
+              Mostly because I can.
+            </p>
+            <p>
+              To better educate myself in the deployment, management and development of related technologies, while hopefully providing a better domain name resolution experience along the way.
+            </p>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="howmuch"><span class="embiggen">How Much?</span></h3>
-              <p>
-                Nothing.
-              </p>
-              <p>
-                Sainternet services are provided free to all.
-              </p>
+            <p>
+              Nothing.
+            </p>
+            <p>
+              Sainternet services are provided free to all.
+            </p>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="howdoessainternetmakemoney"><span class="embiggen">How does Sainternet Make Money?</span></h3>
-              <p>
-                It doesn't.
-              </p>
+            <p>
+              It doesn't.
+            </p>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="sowhofundssainternet"><span class="embiggen">So, Who Funds Sainternet?</span></h3>
-              <p>
-                I do.
-              </p>
-              <p>
-                Sainternet requires very little additional overhead outside of my own network requirements, and its continued development is somewhat of a hobby for me.
-              </p>
+            <p>
+              I do.
+            </p>
+            <p>
+              Sainternet requires very little additional overhead outside of my own network requirements, and its continued development is somewhat of a hobby for me.
+            </p>
            </div>
         </div>
       </main>
