saint-lascivious.github.io: fix dns profile download icons
plus multiple other un/related changes

Changes to be committed:
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   portsandprotocols.html
 - modified:   resources/stylesheets/sainternet.css
 - modified:   resources/stylesheets/table.css

--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -139,30 +139,28 @@
                 <span class="mdl-list__item-primary-content">
                   <span>DNS over HTTPS</span>
                 </span>
-                <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-https-only.mobileconfig" download="sainternet-https-only.mobileconfig"><span class="material-icons-outlined">file_download</icon></a>
+                <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-https-only.mobileconfig" download="sainternet-https-only.mobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
               </div>
               <div class="mdl-list__item">
                 <span class="mdl-list__item-primary-content">
                   <span>DNS over TLS</span>
                 </span>
-                <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-tls-only.mobileconfig" download="sainternet-tls-only.mobileconfig"><span class="material-icons-outlined">file_download</span></a>
+                <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-tls-only.mobileconfig" download="sainternet-tls-only.mobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
               </div>
               <div class="mdl-list__item" id="recommendeddnsprofile">
                 <span class="mdl-list__item-primary-content">
                   <span>DNS over HTTPS/TLS</span>
                 </span>
-                <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-https-and-tls.mobileconfig" download="sainternet-https-and-tls.mobileconfig"><span class="material-icons-outlined">file_download</span></a>
+                <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-https-and-tls.mobileconfig" download="sainternet-https-and-tls.mobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
               </div>
             </div>
-            <div class="sainternet-notes">
-              <p>
-                Notes:
-              </p>
-              <ol>
-                <li>These profiles are not digitally signed and that is expected/normal.</li>
-                <li>Sainternet intentionally disables Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent it from bypassing Sainternet.</li>
-              </ol>
-            </div>
+            <p>
+              Notes:
+            </p>
+            <ol>
+              <li>These profiles are not digitally signed and that is expected/normal.</li>
+              <li>Sainternet intentionally disables Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent it from bypassing Sainternet.</li>
+            </ol>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
@@ -197,14 +195,12 @@
               <li>Select "OK"</li>
               <li>Done</li>
             </ol>
-            <div class="sainternet-notes">
-              <p>
-                Notes:
-              </p>
-              <ol>
-                <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> to prevent it from bypassing Sainternet (ignored if manually configured).</li>
-              </ol>
-            </div>
+            <p>
+              Notes:
+            </p>
+            <ol>
+              <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> to prevent it from bypassing Sainternet (ignored if manually configured).</li>
+            </ol>
            </div>
         </div>
       </main>
