--- a/filtereddns.html
+++ b/filtereddns.html
@@ -120,14 +120,15 @@
             <p>
               Sainternet <b>does not</b> and <b><i>will not</i></b> block domains based upon ethical, moral, personal, political or religious belief, nor upon any lack thereof.
             </p>
-            <div class="sainternet-notes">
-              <p>
-                Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> and Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent them from bypassing Sainternet.
-              </p>
-              <p>
-                You can find information about the technologies powering Sainternet Filtered DNS <a href="/technologies.html">here</a>.
-              </p>
-            </div>
+            <p>
+              Notes:
+            </p>
+            <ol>
+              <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> and Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent them from bypassing Sainternet.</li>
+            </ol>
+            <p>
+              You can find information about the technologies powering Sainternet Filtered DNS <a href="/technologies.html">here</a>.
+            </p>
           </div>
         </div>
       </main>
