saint-lascivious.github.io: move ids from headers to containers
this should provide a nicer (albeit slightly wasteful) snap-to
navigation experience without clipping the top of the card off

should also allow for organic discovery of text embiggening

fix 265/404.html nav drawer entries (use ??? for both)

prefetch/render and link to 265 from pokedexoverdns terminal image

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -92,10 +92,10 @@
             </div>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="connecttosainternet">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="connecttosainternet"><span class="embiggen">Connect to Sainternet</span></h3>
+            <h3><span class="embiggen">Connect to Sainternet</span></h3>
             <p>
               The following describes connecting to Sainternet Filtered DNS in several platforms, services.
             </p>
@@ -119,10 +119,10 @@
             </ol>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="appleiosmacos">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="appleiosmacos"><icon class="fa-brands fa-apple"></icon> <span class="embiggen">Apple<br>iOS/macOS</span></h3>
+            <h3><icon class="fa-brands fa-apple"></icon> <span class="embiggen">Apple<br>iOS/macOS</span></h3>
             <p align="center">
               Apple iOS 14/macOS Big Sur or higher required.
             </p>
@@ -163,10 +163,10 @@
             </ol>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="googlechromechromium">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="googlechromechromium"><icon class="fa-brands fa-chrome"></icon> <span class="embiggen">Google<br>Chrome/Chromium</span></h3>
+            <h3><icon class="fa-brands fa-chrome"></icon> <span class="embiggen">Google<br>Chrome/Chromium</span></h3>
             <ol>
               <li>Overflow Menu <icon class="fa-solid fa-ellipsis-vertical"></icon></li>
               <li>Settings <icon class="fa-solid fa-cog"></icon></li>
