--- a/filtereddns.html
+++ b/filtereddns.html
@@ -107,10 +107,10 @@
             </div>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="filtereddns">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="filtereddns"><span class="embiggen">Filtered DNS</span></h3>
+            <h3><span class="embiggen">Filtered DNS</span></h3>
             <p>
               Sainternet offers validating, recursive, caching, <i>mostly</i> specification compliant, filtered <a href="https://wikipedia.org/wiki/Domain_Name_System">DNS</a> servers with a zero logging policy, served over <a href="/portsandprotocols.html#portsandprotocols">all your favourite acronyms</a>.
             </p>
