--- a/frequentlyaskedquestions.html
+++ b/frequentlyaskedquestions.html
@@ -92,19 +92,19 @@
             </div>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="frequentlyaskedquestions">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="frequentlyaskedquestions"><span class="embiggen">Frequently Asked Questions</span></h3>
+            <h3><span class="embiggen">Frequently Asked Questions</span></h3>
             <p>
               Answers to some frequently asked questions regarding Sainternet Filtered DNS.
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="whowhatwhenwhereandwhy">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="whowhatwhenwhereandwhy"><span class="embiggen">Who, What,<br>When, Where and Why?</span></h3>
+            <h3><span class="embiggen">Who, What,<br>When, Where and Why?</span></h3>
             <p align="center">
               <b>Who?</b>
             </p>
@@ -151,10 +151,10 @@
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="howmuch">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="howmuch"><span class="embiggen">How Much?</span></h3>
+            <h3><span class="embiggen">How Much?</span></h3>
             <p>
               Nothing.
             </p>
@@ -163,19 +163,19 @@
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="howdoessainternetmakemoney">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="howdoessainternetmakemoney"><span class="embiggen">How does Sainternet Make Money?</span></h3>
+            <h3><span class="embiggen">How does Sainternet Make Money?</span></h3>
             <p>
               It doesn't.
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="sowhofundssainternet">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="sowhofundssainternet"><span class="embiggen">So, Who Funds Sainternet?</span></h3>
+            <h3><span class="embiggen">So, Who Funds Sainternet?</span></h3>
             <p>
               I do.
             </p>
