--- a/testsainternet.html
+++ b/testsainternet.html
@@ -93,19 +93,19 @@
             </div>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="testsainternet">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="testsainternet"><span class="embiggen">Test Sainternet</span></h3>
+            <h3><span class="embiggen">Test Sainternet</span></h3>
             <p>
               The following describes testing Sainternet Filtered DNS using several methods, utilities.
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="usingdig">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="usingdig"><span class="embiggen">Using dig</span></h3>
+            <h3><span class="embiggen">Using dig</span></h3>
             <p>
               Example Sainternet test query using <a href="https://linux.die.net/man/1/dig">dig</a>:
             </p>
@@ -114,10 +114,10 @@ dig +short txt test.sainternet.xyz
             </pre>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="usingdnslookup">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="usingdnslookup"><span class="embiggen">Using dnslookup</span></h3>
+            <h3><span class="embiggen">Using dnslookup</span></h3>
             <p>
               Example Sainternet test query using <a href="https://github.com/ameshkov/dnslookup">dnslookup</a>:
             </p>
@@ -168,10 +168,10 @@ dnslookup example.org quic://dns.sainternet.xyz
             </pre>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="usingnslookup">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="usingnslookup"><span class="embiggen">Using nslookup</span></h3>
+            <h3><span class="embiggen">Using nslookup</span></h3>
             <p>
               Example Sainternet test query using <a href="https://linux.die.net/man/1/nslookup">nslookup</a>:
             </p>
