--- a/404.html
+++ b/404.html
@@ -77,10 +77,7 @@
           <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
           <a class="mdl-navigation__link" href="/projects.html">Projects</a>
-        </nav>
-        <span class="mdl-layout-title">???</span>
-          <a class="mdl-navigation__link" href="#pokemon404"><b> - ???</b></a>
-        <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href="#pokemon404"><b>???</b></a>
         </nav>
       </div>
       <div class="light_blue-ribbon"></div>
@@ -93,10 +90,10 @@
             </div>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="pokemon404">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="pokemon404"><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
+            <h3><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
             <picture>
               <source srcset="resources/images/luxio-shiny.png" media="(prefers-color-scheme: dark)">
               <img src="resources/images/luxio.png" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
@@ -109,10 +106,10 @@
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="example">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="example"><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
+            <h3><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
             <p>
               Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/dig">dig</a>:
             </p>
