--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
       </div>
       <div class="red-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="welcome">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="welcome"><span class="embiggen">Welcome</span></h3>
+            <h3><span class="embiggen">Welcome</span></h3>
             <picture>
               <source srcset="resources/images/wurmple-shiny.png" media="(prefers-color-scheme: dark)">
               <img src="resources/images/wurmple.png" alt="Image supplied not illustrative, the author is not a Pokémon.">
