--- a/portsandprotocols.html
+++ b/portsandprotocols.html
@@ -93,10 +93,10 @@
             </div>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="portsandprotocols">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="portsandprotocols"><span class="embiggen">Ports and Protocols</span></h3>
+            <h3><span class="embiggen">Ports and Protocols</span></h3>
             <p>
               Sainternet Filtered DNS is available over the following ports and protocols.
             </p>
