--- a/projects.html
+++ b/projects.html
@@ -87,19 +87,19 @@
             </div>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="projects">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="projects"><span class="embiggen">Popular Projects</span></h3>
+            <h3><span class="embiggen">Popular Projects</span></h3>
             <p>
               This page lists some of my more popular projects on GitHub.
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="dnsproxy-config">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="dnsproxy-config"><span class="embiggen">dnsproxy config</span></h3>
+            <h3><span class="embiggen">dnsproxy config</span></h3>
             <p>
               <a href="https://github.com/saint-lascivious/dnsproxy-config">dnsproxy-config</a>
             </p>
@@ -111,10 +111,10 @@
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="haha_cache_go_brrr">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="haha_cache_go_brrr"><span class="embiggen">haha cache go brrr</span></h3>
+            <h3><span class="embiggen">haha cache go brrr</span></h3>
             <p>
               <a href="https://github.com/saint-lascivious/haha_cache_go_brrr">haha_cache_go_brrr</a>
             </p>
@@ -123,10 +123,10 @@
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="munin-pihole-plugins">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="munin-pihole-plugins"><span class="embiggen">munin pihole plugins</span></h3>
+            <h3><span class="embiggen">munin pihole plugins</span></h3>
             <p>
               <a href="https://github.com/saint-lascivious/munin-pihole-plugins">munin-pihole-plugins</a>
             </p>
@@ -135,10 +135,10 @@
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="saint-lascivious_github_io">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="saint-lascivious_github_io"><span class="embiggen">sainternet.xyz</span></h3>
+            <h3><span class="embiggen">sainternet.xyz</span></h3>
             <p>
               <a href="https://github.com/saint-lascivious/saint-lascivious.github.io">saint-lascivious.github.io</a>
             </p>
@@ -154,10 +154,10 @@
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="unbound-config">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="unbound-config"><span class="embiggen">unbound config</span></h3>
+            <h3><span class="embiggen">unbound config</span></h3>
             <p>
               <a href="https://github.com/pi-hole/FTL">unbound-config</a>
             </p>
