--- a/technologies.html
+++ b/technologies.html
@@ -92,19 +92,19 @@
             </div>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="technologies">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="technologies"><span class="embiggen">Technologies</span></h3>
+            <h3><span class="embiggen">Technologies</span></h3>
             <p>
               Sainternet Filtered DNS is made possible using, but neither endorsed nor condoned by, the following projects.
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="dnsdist">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="dnsdist"><span class="embiggen">dnsdist</span></h3>
+            <h3><span class="embiggen">dnsdist</span></h3>
             <p>
               <a href="https://github.com/PowerDNS/pdns/blob/master/pdns/README-dnsdist.md">dnsdist</a>
             </p>
@@ -113,10 +113,10 @@
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="dnsproxy">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="dnsproxy"><span class="embiggen">dnsproxy</span></h3>
+            <h3><span class="embiggen">dnsproxy</span></h3>
             <p>
               <a href="https://github.com/AdguardTeam/dnsproxy">dnsproxy</a>
             </p>
@@ -125,10 +125,10 @@
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="piholeftl">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="piholeftl"><span class="embiggen">pihole-FTL</span></h3>
+            <h3><span class="embiggen">pihole-FTL</span></h3>
             <p>
               <a href="https://github.com/pi-hole/FTL">pihole-FTL</a>
             </p>
@@ -137,10 +137,10 @@
             </p>
            </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="unbound">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="unbound"><span class="embiggen">unbound</span></h3>
+            <h3><span class="embiggen">unbound</span></h3>
             <p>
               <a href="https://github.com/NLnetLabs/unbound">unbound</a>
             </p>
