saint-lascivious.github.io: minor menu adjustment
Changes to be committed:
 - modified:   265.html
 - modified:   404.html

--- a/404.html
+++ b/404.html
@@ -53,6 +53,10 @@
     <link rel="stylesheet" href="/resources/stylesheets/pre.css">
     <link rel="stylesheet" href="/resources/stylesheets/ribbons.css">
     <link rel="stylesheet" href="/resources/stylesheets/sainternet.css">
+
+    <!-- Prefetch / Prerender-->
+    <link rel="prefetch" href="/265.html" as="document">
+    <link rel="prerender" href="/265.html">
   </head>
   <body>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -77,6 +81,10 @@
           <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
           <a class="mdl-navigation__link" href="/projects.html">Projects</a>
+        </nav>
+        <span class="mdl-layout-title">???</span>
+        <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href="/265.html"> - ???</a>
           <a class="mdl-navigation__link" href="#pokemon404"><b>???</b></a>
         </nav>
       </div>
